@@ -3,6 +3,7 @@ This this the changelog file for the Pothos C++ library.
 Release 0.3.3 (pending)
 ==========================
 
+- Switch to getWildcardAddr() in logger for portability
 - Fix Poco in-tree build support, was missing Poco_FOUND
 - Updated muparserx submodule, contains various fixes
 - CMake POTHOS_SOVER variable cache fix use INTERNAL type
